--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "node",
+            "name": "Run msEdge",
+            "type": "msedge",
             "request": "launch",
-            "name": "Launch Program",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "program": "${workspaceFolder}/my-app/src/index.js"
+            "url": "http://localhost:3000",
+            "webRoot": "${workspaceFolder}/my-app"
         }
     ]
 }
