Added more dynamic content and added new project to practice dynamic styles.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "msedge",
             "request": "launch",
             "url": "http://localhost:3000",
-            "webRoot": "${workspaceFolder}/my-app"
+            "webRoot": "${workspaceFolder}/second-app"
         }
     ]
 }
