--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "msedge",
             "request": "launch",
             "url": "http://localhost:3000",
-            "webRoot": "${workspaceFolder}/animated-react-app"
+            "webRoot": "${workspaceFolder}/replace-redux-app"
         }
     ]
 }
